2008-03-11  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* io-bmp.c: (DecodeHeader): Check for the BMP header magic numbers
	before decoding it.  (#505085)

2008-02-12  Matthias Clasen  <mclasne@redhat.com>

	* === Released 2.12.8 ===

2008-02-12  Matthias Clasen  <mclasne@redhat.com>

	* gdk-pixbuf-io.c (at_scale_size_prepared_cb): Don't let
	the width or height go below 1.  (#516024, Christian Persch)

2008-02-10  Matthias Clasen  <mclasne@redhat.com>

	* gdk-pixbuf-scaled-anim.c: Try harder to return pixbufs
	of the requested size.  (#494515, Mike Morrison)

2008-01-29  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.7 ===

2008-01-28  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.12.6 ===

2008-01-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.5 ===

2008-01-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.4 ===

2007-12-09  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* io-jpeg.c: Fix the spinguard logic for big buffers.
	(#494667, Ed Catmur)

2007-12-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.3 ===

2007-11-26  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.2 ===

2007-11-10  Matthias Clasen <mclasen@redhat.com>

	* io-jpeg.c: Avoid unaligned accesses that cause
	problems on some architectures.  (patch by David Miller)

2007-10-16  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.12.1 ===

2007-10-16  Matthias Clasen  <mclasen@redhat.com>

	* io-wbmp.c: Use better magic.  (#339877, Bastien Nocera)

2007-09-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.0 ===

2007-09-13  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-scaled-anim.c (get_scaled_pixbuf): Don't leak 
	options.  

2007-09-08  Matthias Clasen  <mclasen@redhat.com>

	* io-ani.c: Fix some possible crashes.  (#468832, Michal Luczaj)

2007-09-07  Matthias Clasen  <mclasen@redhat.com>

	* io-tga.c (gdk_pixbuf__tga_stop_load): Handle pbuf 